# nonasymptotic-transformer

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: approximation_experiment.py  comparison_experiment.py  experiment.py  gradnorm_experiment.py  linearization_experiment.py  plot.py  plot_comparison.py  plot_gradnorms.py  plot_norms.py  training_experiment.py  two_panel_shared.py
src/transformer_ntk/: data.py  model.py  utils.py
tests/: test_model.py  test_utils.py
