[project]
name = "transformer-ntk"
version = "0.1.0"
description = ""
authors = [
    {name = "enesarda",email = "enesarda22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
ruff = "^0.13.1"
pytest = "^8.4.2"

