[project]
name = "transformer-ntk"
version = "0.1.0"
description = "Code for 'Finite-Time Analysis of Gradient Descent for Shallow Transformers' (AISTATS 2026)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Enes Arda" },
    { name = "Semih Cayci" },
    { name = "Atilla Eryilmaz" },
]
dependencies = [
    "torch>=2.8.0,<3.0.0",
    "numpy>=2.3.3,<3.0.0",
    "pandas>=2.3.2,<3.0.0",
    "matplotlib>=3.10.6,<4.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transformer_ntk"]
